[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sphinx-notfound-page"
authors = [
    {name = "Manuel Kaufmann", email = "humitos@gmail.com"}
]
description = "Sphinx extension to build a 404 page with absolute URLs"
keywords=[
    "notfound",
    "404",
    "page",
    "sphinx",
    "documentation",
]
dependencies = [
    "sphinx>=5",
]
version = "1.1.0"
readme = "README.rst"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
]

[project.optional-dependencies]
test = [
    "tox",
]

doc = [
    "sphinx-tabs",
    "sphinx-rtd-theme",
    "sphinxemoji",
    "sphinx-autoapi",
]

[project.urls]
Documentation = "https://sphinx-notfound-page.readthedocs.io/"
Source = "https://github.com/readthedocs/sphinx-notfound-page"
Tracker = "https://github.com/readthedocs/sphinx-notfound-page/issues"

[tool.flit.module]
name = "notfound"

[tool.flit.sdist]
exclude = [
  "common",
  "tests",
  ".circleci",
  ".github",
  ".gitignore",
  ".readthedocs.yml",
  "pytest.ini",
  "conftest.py",
  "tox.ini",
]

[tool.bumpver]
current_version = "1.1.0"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Release {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
"notfound/__init__.py" = [
    '__version__ = "{version}"',
]